==> grblHAL/RP2040/serial.c <==
#include <stdbool.h>
#include <stdint.h>
#include <string.h>
#include "hardware/gpio.h"
#include "hardware/uart.h"
#include "hardware/irq.h"
#include "driver.h"
#include "grbl/protocol.h"
#include "grbl/pin_bits_masks.h"
#define RX_BUFFER_HWM 800
#define RX_BUFFER_LWM 300
#define UART_TX_PIN 0
#define UART_RX_PIN 1
#define UART_PORT uart0
#define UART ((uart_hw_t *)UART_PORT)
#define UART_IRQ UART0_IRQ
#define UART_1_TX_PIN 8
#define UART_1_RX_PIN 9
#define UART_1_PORT uart1
#define UART_1 ((uart_hw_t *)UART_1_PORT)
#define UART_1_IRQ UART1_IRQ
#define SERIAL1_PORT -1

void serialRegisterStreams (void)
{
    static io_stream_details_t streams = {
        .n_streams = sizeof(serial) / sizeof(io_stream_properties_t),
        .streams = serial,
    };

    static const periph_pin_t tx0 = {
        .function = Output_TX,
        .group = PinGroup_UART,
        .pin = UART_TX_PIN,
        .mode = { .mask = PINMODE_OUTPUT },
        .description = "Primary UART"
    };

    static const periph_pin_t rx0 = {
        .function = Input_RX,
        .group = PinGroup_UART,
        .pin = UART_RX_PIN,
        .mode = { .mask = PINMODE_NONE },
        .description = "Primary UART"
    };

    hal.periph_port.register_pin(&rx0);
    hal.periph_port.register_pin(&tx0);

#if SERIAL1_PORT >= 0

    static const periph_pin_t tx1 = {
        .function = Output_TX,
        .group = PinGroup_UART2,
        .pin = UART_1_TX_PIN,
        .mode = { .mask = PINMODE_OUTPUT },
        .description = "Secondary UART"
    };

    static const periph_pin_t rx1 = {
        .function = Input_RX,
        .group = PinGroup_UART2,
        .pin = UART_1_RX_PIN,
        .mode = { .mask = PINMODE_NONE },
        .description = "Secondary UART"
    };

    hal.periph_port.register_pin(&rx1);
    hal.periph_port.register_pin(&tx1);

#endif

    stream_register_streams(&streams);
}

static void serialTxFlush (void)
{
    hw_clear_bits(&UART->imsc, UART_UARTIMSC_TXIM_BITS);
    txbuf.tail = txbuf.head;
}

static bool serialPutC (const char c)
{
    uint_fast16_t next_head;

    if(!(UART->imsc & UART_UARTIMSC_TXIM_BITS)) {               // If the transmit interrupt is deactivated
        if(!(UART->fr & UART_UARTFR_TXFF_BITS)) {               // and if the TX FIFO is not full
            UART->dr = c;                                       // Write data in the TX FIFO
            return true;
        } else
            hw_set_bits(&UART->imsc, UART_UARTIMSC_TXIM_BITS);  // Enable transmit interrupt
    }

    // Write data in the Buffer is transmit interrupt activated or TX FIFO is                                                                
    next_head = BUFNEXT(txbuf.head, txbuf);                     // Get and update head pointer

    while(txbuf.tail == next_head) {                            // Buffer full, block until space is available...
        if(!hal.stream_blocking_callback())
            return false;
    }

    txbuf.data[txbuf.head] = c;                                 // Add data to buffer
    txbuf.head = next_head;                                     // and update head pointer

    return true;
}

static uint16_t serialTxCount (void) {

    uint_fast16_t head = txbuf.head, tail = txbuf.tail;

    return BUFCOUNT(head, tail, TX_BUFFER_SIZE) + ((UART->fr & UART_UARTFR_BUSY_BITS) ? 1 : 0);
}

static bool serialSetBaudRate (uint32_t baud_rate)
{
    uart_set_baudrate(UART_PORT, baud_rate);

    return true;
}

static bool serialDisable (bool disable)
{
    if(disable)
        hw_clear_bits(&UART->imsc, UART_UARTIMSC_RXIM_BITS|UART_UARTIMSC_RTIM_BITS);       
    else
        hw_set_bits(&UART->imsc, UART_UARTIMSC_RXIM_BITS|UART_UARTIMSC_RTIM_BITS);    
}

static const io_stream_t *serialInit (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .is_connected = stream_connected,
        .read = serialGetC,
        .write = serialWriteS,
        .write_n = serialWrite,
        .write_char = serialPutC,
        .enqueue_rt_command = serialEnqueueRtCommand,
        .get_rx_buffer_free = serialRxFree,
        .get_rx_buffer_count = serialRxCount,
        .get_tx_buffer_count = serialTxCount,
        .reset_read_buffer = serialRxFlush,
        .cancel_read_buffer = serialRxCancel,
        .reset_write_buffer = serialTxFlush,
        .suspend_read = serialSuspendInput,
        .disable_rx = serialDisable,
        .set_baud_rate = serialSetBaudRate,
        .set_format = serialSetFormat,
        .set_enqueue_rt_handler = serialSetRtHandler
    };

    if(!serialClaimPort(stream.instance))
        return NULL;

    gpio_set_function(UART_TX_PIN, GPIO_FUNC_UART);
    gpio_set_function(UART_RX_PIN, GPIO_FUNC_UART);
    
    uart_init(UART_PORT, baud_rate);

    uart_set_hw_flow(UART_PORT, false, false);
    uart_set_format(UART_PORT, 8, 1, UART_PARITY_NONE);
    uart_set_fifo_enabled(UART_PORT, true);

    irq_set_exclusive_handler(UART_IRQ, uart_interrupt_handler);
    irq_set_enabled(UART_IRQ, true);
    
    hw_set_bits(&UART->imsc, UART_UARTIMSC_RXIM_BITS|UART_UARTIMSC_RTIM_BITS);

#ifdef RTS_PIN
    DIGITAL_OUT(RTS_BIT, (rxbuf.rts_state = Off));
#endif

    return &stream;           
}

static bool serial1PutC (const char c)
{
    uint_fast16_t next_head;

    if(!(UART_1->imsc & UART_UARTIMSC_TXIM_BITS)) {              // If the transmit interrupt is deactivated
        if(!(UART_1->fr & UART_UARTFR_TXFF_BITS)) {              // and if the TX FIFO is not full
            UART_1->dr = c;                                      // Write data in the TX FIFO
            return true;
        } else
            hw_set_bits(&UART_1->imsc, UART_UARTIMSC_TXIM_BITS); // Enable transmit interrupt
    }

    // Write data in the Buffer is transmit interrupt activated or TX FIFO is                                                                
    next_head = BUFNEXT(tx1buf.head, tx1buf);                   // Get and update head pointer

    while(tx1buf.tail == next_head) {                           // Buffer full, block until space is available...
        if(!hal.stream_blocking_callback())
            return false;
    }

    tx1buf.data[tx1buf.head] = c;                               // Add data to buffer
    tx1buf.head = next_head;                                    // and update head pointer

    return true;
}

static uint16_t serial1TxCount (void) {

    uint_fast16_t head = tx1buf.head, tail = tx1buf.tail;

    return BUFCOUNT(head, tail, TX_BUFFER_SIZE) + ((UART_1->fr & UART_UARTFR_BUSY_BITS) ? 1 : 0);
}

static bool serial1SetBaudRate (uint32_t baud_rate)
{
    uart_set_baudrate(UART_1_PORT, baud_rate);

    return true;
}

static bool serial1Disable (bool disable)
{
    if(disable)
        hw_clear_bits(&UART_1->imsc, UART_UARTIMSC_RXIM_BITS|UART_UARTIMSC_RTIM_BITS);       
    else
        hw_set_bits(&UART_1->imsc, UART_UARTIMSC_RXIM_BITS|UART_UARTIMSC_RTIM_BITS);
}

static const io_stream_t *serial1Init (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .instance = 1,
        .is_connected = stream_connected,
        .read = serial1GetC,
        .write = serial1WriteS,
        .write_char = serial1PutC,
        .write_n = serial1Write,
        .enqueue_rt_command = serial1EnqueueRtCommand,
        .get_rx_buffer_free = serial1RxFree,
        .get_rx_buffer_count = serial1RxCount,
        .get_tx_buffer_count = serial1TxCount,
        .reset_read_buffer = serial1RxFlush,
        .cancel_read_buffer = serial1RxCancel,
        .reset_write_buffer = serial1TxFlush,
        .disable_rx = serial1Disable,
        .suspend_read = serial1SuspendInput,
        .set_baud_rate = serial1SetBaudRate,
        .set_format = serial1SetFormat,
        .set_enqueue_rt_handler = serial1SetRtHandler
    };

    if(!serialClaimPort(stream.instance))
        return NULL;

    gpio_set_function(UART_1_TX_PIN, GPIO_FUNC_UART);
#if UART_1_RX_PIN == 27 // RP2350 - for now...
    gpio_set_function(UART_1_RX_PIN, 11);
#else
    gpio_set_function(UART_1_RX_PIN, GPIO_FUNC_UART);
#endif
    uart_init(UART_1_PORT, baud_rate);

    uart_set_hw_flow(UART_1_PORT, false, false);
    uart_set_format(UART_1_PORT, 8, 1, UART_PARITY_NONE);
    uart_set_fifo_enabled(UART_1_PORT, true);

    irq_set_exclusive_handler(UART_1_IRQ, uart1_interrupt_handler);
    irq_set_enabled(UART_1_IRQ, true);
    
    hw_set_bits(&UART_1->imsc, UART_UARTIMSC_RXIM_BITS|UART_UARTIMSC_RTIM_BITS);

    return &stream;
}
