==> grblHAL/STM32F1xx/Src/serial.c <==
#include "serial.h"
#include <string.h>
#include "grbl/hal.h"
#include "grbl/protocol.h"
#include "main.h"
#define SERIAL_PORT 0
#define SERIAL1_PORT 0
#define USART USART1
#define USART_IRQ USART1_IRQn
#define USART_IRQHandler USART1_IRQHandler
#define USART_CLK HAL_RCC_GetPCLK2Freq
#define USART_CLK_ENABLE __HAL_RCC_USART1_CLK_ENABLE
#define USART UART5
#define USART_IRQ UART5_IRQn
#define USART_IRQHandler UART5_IRQHandler
#define USART_CLK HAL_RCC_GetPCLK1Freq
#define USART_CLK_ENABLE __HAL_RCC_UART5_CLK_ENABLE
#define UART2 USART3
#define UART2_IRQ USART3_IRQn
#define UART2_IRQHandler USART3_IRQHandler
#define UART2_CLK HAL_RCC_GetPCLK1Freq
#define UART2_CLK_ENABLE __HAL_RCC_USART3_CLK_ENABLE

void serialRegisterStreams (void)
{
    static io_stream_details_t streams = {
        .n_streams = sizeof(serial) / sizeof(io_stream_properties_t),
        .streams = serial,
    };

#ifndef STM32F103xB

#if SERIAL_PORT

 #if SERIAL_PORT == 1

  static const periph_pin_t tx0 = {
      .function = Output_TX,
      .group = PinGroup_UART1,
      .port  = GPIOA,
      .pin   = 9,
      .mode  = { .mask = PINMODE_OUTPUT },
      .description = "UART1"
  };

  static const periph_pin_t rx0 = {
      .function = Input_RX,
      .group = PinGroup_UART1,
      .port = GPIOA,
      .pin = 10,
      .mode = { .mask = PINMODE_NONE },
      .description = "UART1"
  };

 #else // UART5

  static const periph_pin_t tx0 = {
    .function = Output_TX,
    .group = PinGroup_UART1,
    .port  = GPIOC,
    .pin   = 12,
    .mode  = { .mask = PINMODE_OUTPUT },
    .description = "UART1"
  };

  static const periph_pin_t rx0 = {
    .function = Input_RX,
    .group = PinGroup_UART1,
    .port = GPIOD,
    .pin = 2,
    .mode = { .mask = PINMODE_NONE },
    .description = "UART1"
  };

 #endif

  hal.periph_port.register_pin(&rx0);
  hal.periph_port.register_pin(&tx0);

#endif

#if SERIAL1_PORT

 #if SERIAL1_PORT == 31

  static const periph_pin_t tx1 = {
      .function = Output_TX,
      .group = PinGroup_UART2,
      .port  = GPIOC,
      .pin   = 10,
      .mode  = { .mask = PINMODE_OUTPUT },
      .description = "UART2"
  };

  static const periph_pin_t rx1 = {
      .function = Input_RX,
      .group = PinGroup_UART2,
      .port = GPIOC,
      .pin = 11,
      .mode = { .mask = PINMODE_NONE },
      .description = "UART2"
  };

 #else

  static const periph_pin_t tx1 = {
      .function = Output_TX,
      .group = PinGroup_UART2,
      .port  = GPIOB,
      .pin   = 10,
      .mode  = { .mask = PINMODE_OUTPUT },
      .description = "UART2"
  };

  static const periph_pin_t rx1 = {
      .function = Input_RX,
      .group = PinGroup_UART2,
      .port = GPIOB,
      .pin = 11,
      .mode = { .mask = PINMODE_NONE },
      .description = "UART2"
  };

 #endif

  hal.periph_port.register_pin(&rx1);
  hal.periph_port.register_pin(&tx1);

#endif

#endif // STM32F103xB

    stream_register_streams(&streams);
}

static bool serialPutC (const char c)
{
    uint16_t next_head = BUFNEXT(txbuf.head, txbuf);    // Get pointer to next free slot in buffer

    while(txbuf.tail == next_head) {                    // While TX buffer full
        if(!hal.stream_blocking_callback())             // check if blocking for space,
            return false;                               // exit if not (leaves TX buffer in an inconsistent state)
    }

    txbuf.data[txbuf.head] = c;                         // Add data to buffer,
    txbuf.head = next_head;                             // update head pointer and
    USART->CR1 |= USART_CR1_TXEIE;                     // enable TX interrupts

    return true;
}

static void serialTxFlush (void)
{
    USART->CR1 &= ~USART_CR1_TXEIE;     // Disable TX interrupts
    txbuf.tail = txbuf.head;
}

static uint16_t serialTxCount (void)
{
    uint32_t tail = txbuf.tail, head = txbuf.head;

    return BUFCOUNT(head, tail, TX_BUFFER_SIZE) + (USART->SR & USART_SR_TC ? 0 : 1);
}

static bool serialSetBaudRate (uint32_t baud_rate)
{
    USART->CR1 = USART_CR1_RE|USART_CR1_TE;
    USART->BRR = UART_BRR_SAMPLING16(USART_CLK(), baud_rate);
    USART->CR1 |= (USART_CR1_UE|USART_CR1_RXNEIE);

    return true;
}

static bool serialDisable (bool disable)
{
    if(disable)
        USART->CR1 &= ~USART_CR1_RXNEIE;
    else
        USART->CR1 |= USART_CR1_RXNEIE;

    return true;
}

const io_stream_t *serialInit (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .state.connected = On,
        .read = serialGetC,
        .write = serialWriteS,
        .write_char = serialPutC,
        .write_n =  serialWrite,
        .enqueue_rt_command = serialEnqueueRtCommand,
        .get_rx_buffer_free = serialRxFree,
        .get_rx_buffer_count = serialRxCount,
        .get_tx_buffer_count = serialTxCount,
        .reset_write_buffer = serialTxFlush,
        .reset_read_buffer = serialRxFlush,
        .cancel_read_buffer = serialRxCancel,
        .disable_rx = serialDisable,
        .set_baud_rate = serialSetBaudRate,
        .suspend_read = serialSuspendInput,
        .set_enqueue_rt_handler = serialSetRtHandler
    };

    if(!serialClaimPort(stream.instance))
        return NULL;

    USART_CLK_ENABLE();

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode = GPIO_MODE_AF_PP,
        .Speed = GPIO_SPEED_FREQ_HIGH
    };

#if SERIAL_PORT == 1

    GPIO_InitStructure.Pin = GPIO_PIN_9;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

    GPIO_InitStructure.Pin = GPIO_PIN_10;
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(GPIOA, &GPIO_InitStructure);

#else // UART5

    GPIO_InitStructure.Pin = GPIO_PIN_12;
    HAL_GPIO_Init(GPIOC, &GPIO_InitStructure);

    GPIO_InitStructure.Pin = GPIO_PIN_2;
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(GPIOD, &GPIO_InitStructure);

#endif

    serialSetBaudRate(baud_rate);

    HAL_NVIC_SetPriority(USART_IRQ, 0, 0);
    HAL_NVIC_EnableIRQ(USART_IRQ);

    return &stream;
}

static bool serial1PutC (const char c)
{
//    if(txbuf1.head != txbuf1.tail || !serialPutCNonBlocking(c)) {           // Try to send character without buffering...

        uint16_t next_head = BUFNEXT(txbuf1.head, txbuf1);    // .. if not, get pointer to next free slot in buffer

        while(txbuf1.tail == next_head) {                    // While TX buffer full
            if(!hal.stream_blocking_callback())             // check if blocking for space,
                return false;                               // exit if not (leaves TX buffer in an inconsistent state)
        }

        txbuf1.data[txbuf1.head] = c;                         // Add data to buffer,
        txbuf1.head = next_head;                             // update head pointer and
        UART2->CR1 |= USART_CR1_TXEIE;                      // enable TX interrupts
//    }

    return true;
}

static uint16_t serial1TxCount (void)
{
    uint32_t tail = txbuf1.tail, head = txbuf1.head;

    return BUFCOUNT(head, tail, TX_BUFFER_SIZE) + (UART2->SR & USART_SR_TC ? 0 : 1);
}

static bool serial1SetBaudRate (uint32_t baud_rate)
{
    UART2->CR1 = USART_CR1_RE|USART_CR1_TE;
    UART2->BRR = UART_BRR_SAMPLING16(UART2_CLK(), baud_rate);
    UART2->CR1 |= (USART_CR1_UE|USART_CR1_RXNEIE);

    return true;
}

static bool serial1Disable (bool disable)
{
    if(disable)
        UART2->CR1 &= ~USART_CR1_RXNEIE;
    else
        UART2->CR1 |= USART_CR1_RXNEIE;

    return true;
}

const io_stream_t *serial1Init (uint32_t baud_rate)
{
    static const io_stream_t stream = {
        .type = StreamType_Serial,
        .instance = 1,
        .state.connected = On,
        .read = serial1GetC,
        .write = serial1WriteS,
        .write_n =  serial1Write,
        .write_char = serial1PutC,
        .enqueue_rt_command = serial1EnqueueRtCommand,
        .get_rx_buffer_free = serial1RxFree,
        .get_rx_buffer_count = serial1RxCount,
        .get_tx_buffer_count = serial1TxCount,
        .reset_write_buffer = serial1TxFlush,
        .reset_read_buffer = serial1RxFlush,
        .cancel_read_buffer = serial1RxCancel,
        .suspend_read = serial1SuspendInput,
        .disable_rx = serial1Disable,
        .set_baud_rate = serial1SetBaudRate,
        .set_enqueue_rt_handler = serial1SetRtHandler
    };

    if(!serialClaimPort(stream.instance))
        return NULL;

    GPIO_InitTypeDef GPIO_InitStructure = {
        .Mode = GPIO_MODE_AF_PP,
        .Speed = GPIO_SPEED_FREQ_HIGH
    };

    UART2_CLK_ENABLE();

    GPIO_InitStructure.Pin = GPIO_PIN_10;
    HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);

    GPIO_InitStructure.Pin = GPIO_PIN_11;
    GPIO_InitStructure.Mode = GPIO_MODE_INPUT;
    GPIO_InitStructure.Pull = GPIO_NOPULL;
    HAL_GPIO_Init(GPIOB, &GPIO_InitStructure);

#if SERIAL1_PORT == 31
    __HAL_AFIO_REMAP_USART3_PARTIAL();
#else
    __HAL_AFIO_REMAP_USART3_DISABLE();
#endif

    serial1SetBaudRate(115200);

    HAL_NVIC_SetPriority(UART2_IRQ, 0, 0);
    HAL_NVIC_EnableIRQ(UART2_IRQ);

    return &stream;
}
